infra/k8s/nginx-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: websajt
  template:
    metadata:
      labels:
        app: websajt
    spec:
      containers:
        - name: site-k8s
          image: bandzior/site-k8s
          resources:
            limits:
              memory: '2Gi'
              cpu: '1'
            requests:
              cpu: '0.1'
              memory: '128Mi'
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
