infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'lets-encrypt-staging'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/issue-temporary-certificate: 'true'
    # acme.cert-manager.io/http01-edit-in-place: 'true'
  labels:
    name: ingress
spec:
  tls:
    - hosts:
        - site.balcerski.eu
      secretName: web-ssl
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: websajt-srv
                port:
                  number: 80
